--- a/plugin.xml
+++ b/plugin.xml
@@ -41,6 +41,26 @@
             class="com.windhoverlabs.ide.config.PreferenceInitializer">
       </initializer>
    </extension>
+   <extension
+         point="org.eclipse.ui.propertyPages">
+      <page
+            class="com.windhoverlabs.ide.properties.SamplePropertyPage"
+            id="com.windhoverlabs.ide.properties.samplePropertyPage"
+            name="Sample Page"
+            nameFilter="*.*">
+         <enabledWhen>
+            <instanceof
+                  value="org.eclipse.core.resources.IFile">
+            </instanceof>
+         </enabledWhen>
+      </page>
+   </extension>
+   <extension
+         point="org.eclipse.ui.propertiesView">
+      <excludeSources
+            id="dynamicexample.excludeSources1">
+      </excludeSources>
+   </extension>
 
 
 </plugin>
